home/apps/networking/traefik/routers/networking/traefik-dashboard.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: networking
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.d90.name`)
      kind: Rule
    #   middlewares:
    #     - name: traefik-dashboard-basicauth
    #       namespace: traefik
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: tls.traefik
